Shorcuts added at atajos

--- a/atajos.html
+++ b/atajos.html
@@ -35,7 +35,7 @@
                 <div class="row">
                     <div class="col-lg-10 col-xl-8 offset-lg-1 offset-xl-2">
                         <div class="intro">
-                            <h1 class="text-center">Atajos</h1>
+                            <h1 class="text-center">Atajos Básicos</h1>
                             <p class="text-center"><span class="by">by</span> <a href="#">Kevin Luciano</a><span class="date">24 de diciembre, 2021</span></p>
                         </div>
                         <div class="text">
@@ -46,18 +46,26 @@
                             <p>Crea un nuevo repositorio en GitHub, asigna el nombre deseado. Para tu repositorio puedes elegir: público o privado.</p>
                             <p class="border rounded-0 border-light"><img class="img-fluid" style="transform-origin: 200px 200px;width: 1783px;" src="assets/img/creating-new-repository.png"></p>
                             <h2>Configuración rápida</h2>
-                            <p>Una vez dado clic en "Create repository" verás la configuración rápida (<strong>Quick setup&nbsp;</strong>) de GitHub. Tendrás 3 opciones para poder crear tu repositorio.<br></p>
+                            <p>Una vez dado clic en "Create repository" verás la configuración rápida (<strong>Quick setup</strong>) de GitHub. Tendrás 3 opciones para poder crear tu repositorio.<br></p>
                             <p class="border rounded-0 border-light"><img class="img-fluid" style="transform-origin: 200px 200px;width: 1783px;" src="assets/img/Quick%20Setup%20GitHub.png"></p>
-                            <h2>Inicializar un proyecto</h2>
-                            <p>Para iniciar tu primer proyecto en Git, en la carpeta donde tendrás tu proyecto, ejecuta el comando.<br></p>
-                            <p class="border rounded-0 border-light">git init</p>
-                            <h2>Inicializar un proyecto</h2>
-                            <p>Para iniciar tu primer proyecto en Git, en la carpeta donde tendrás tu proyecto, ejecuta el comando.<br></p>
-                            <p class="border rounded-0 border-light">git init</p>
+                            <h2>Añadiendo archivos</h2>
+                            <p>Para que git empiece a seguir los cambios de este fichero vamos ejecutar<br></p>
+                            <p class="border rounded-0 border-light">git add .</p>
+                            <h2>Guardando cambios</h2>
+                            <p>El comando git commit guardará todos los cambio hechos en la zona de montaje o área de preparación (staging area), junto con una breve descripción del usuario, en un "commit" al repositorio local.<br></p>
+                            <p class="border rounded-0 border-light">git commit -m "Tu comentario aquí"</p>
+                            <h2>El paso "final"</h2>
+                            <p><strong>Git push</strong>&nbsp;se suele usar para publicar y cargar cambios locales a un repositorio central. Después de modificar el repositorio local, se ejecuta un comando&nbsp;<strong>push</strong>&nbsp;para compartir las modificaciones con miembros remotos del equipo.<br></p>
+                            <p class="border rounded-0 border-light">git push</p>
+                            <h2>Verifica el estado de tu repositorio</h2>
+                            <p>Para conocer en qué área de trabajo se encuentran nuestros archivos utiliza&nbsp;el comando<br></p>
+                            <p class="border rounded-0 border-light">git status</p>
+                            <h2>¿Cómo funciona git?</h2>
                             <figure class="figure d-block">
                                 <figcaption class="figure-caption"></figcaption>
                             </figure>
                         </div>
+                        <p>A través de este diagrama te muestro como funciona git.</p><img class="img-fluid" style="transform-origin: 200px 200px;width: 1783px;" src="assets/img/git.png">
                     </div>
                 </div>
             </div>
