Download section added

--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
                             <p>GitHub es una herramienta esencial para los ingenieros de software. Actualmente cuenta con más de 25 millones de usuarios. Se trata de un número considerable de profesionales que recurren a GitHub para mejorar el flujo de trabajo y la colaboración.</p>
                             <h2>¿Qué es GIT?</h2>
                             <p>Git es un sistema de control de versiones, diseñado por Linus Torvalds, que nos permitirá trabajar de manera colaborativa, haciendo fácil y óptimo el trabajo en equipo cuando estamos desarrollando software.</p>
+                            <h2>Descarga e instala git</h2>
+                            <p>Para trabajar con git desde tu computadora tienes que instalarlo, descárgalo en:&nbsp;<a href="https://git-scm.com/downloads">Git - Downloads (git-scm.com)</a>&nbsp;Puedes instalar git en sistemas operativos de Windows, MacOS y Linux/Unix.<br></p>
                             <figure class="figure d-block">
                                 <figcaption class="figure-caption"></figcaption>
                             </figure>
