Video added - How to use your repository

--- a/atajos.html
+++ b/atajos.html
@@ -61,11 +61,11 @@
                             <p>Para conocer en qué área de trabajo se encuentran nuestros archivos utiliza&nbsp;el comando<br></p>
                             <p class="border rounded-0 border-light">git status</p>
                             <h2>¿Cómo funciona git?</h2>
-                            <figure class="figure d-block">
-                                <figcaption class="figure-caption"></figcaption>
-                            </figure>
+                            <p>A través de este diagrama te muestro como funciona git.</p><img class="img-fluid" style="transform-origin: 200px 200px;width: 1783px;" src="assets/img/git.png">
+                            <h2>¿Y después que sigue?</h2>
+                            <figure class="figure d-block"></figure>
                         </div>
-                        <p>A través de este diagrama te muestro como funciona git.</p><img class="img-fluid" style="transform-origin: 200px 200px;width: 1783px;" src="assets/img/git.png">
+                        <p>Te invito a ver el siguiente video, una vez que tu archivos locales se encuentran en el repositorio, tienes que llevar de manera constante "tus movimientos" a GitHub, ¿cómo? averígualo en el siguiente video.</p><iframe allowfullscreen="" frameborder="0" src="https://www.youtube.com/embed/VNjhRSmMF94" width="560" height="315"></iframe>
                     </div>
                 </div>
             </div>
