--- a/atajos.html
+++ b/atajos.html
@@ -24,7 +24,6 @@
                     <li class="nav-item"><a class="nav-link" href="index.html">Inicio</a></li>
                     <li class="nav-item"></li>
                     <li class="nav-item"><a class="nav-link active" href="atajos.html">Atajos</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Contacto</a></li>
                 </ul>
             </div>
         </div>
@@ -39,6 +38,9 @@
                             <p class="text-center"><span class="by">by</span> <a href="#">Kevin Luciano</a><span class="date">24 de diciembre, 2021</span></p>
                         </div>
                         <div class="text">
+                            <h2>Clonar un repositorio</h2>
+                            <p>¿Sabías que puedes clonar repositorios desde GitHub.com a tu equipo local? Hacer esto permite facilitar la solución de conflictos de combinación, agregar o quitar archivos y enviar confirmaciones más grandes. Cuando se clona un repositorio, ten presente que se copia el repositorio desde GitHub.com al equipo local. Para hacerlo, ejecuta desde terminal el siguiente comando.<br></p>
+                            <p class="border rounded-0 border-light">git clone https://github.com/<em>USERNAME</em>/<em>REPOSITORY-NAME</em></p>
                             <h2>Inicializar un proyecto</h2>
                             <p>Para iniciar tu primer proyecto en Git, en la carpeta donde tendrás tu proyecto, ejecuta el siguiente comando.<br></p>
                             <p class="border rounded-0 border-light">git init</p>
@@ -85,9 +87,9 @@
                 <div class="col-sm-6 col-md-3 item">
                     <h3>Acerca de</h3>
                     <ul>
-                        <li><a href="#">Kevin Luciano</a></li>
+                        <li></li>
                         <li><a href="#">Comunidad UNID</a></li>
-                        <li><a href="#">Contacto</a></li>
+                        <li></li>
                     </ul>
                 </div>
                 <div class="col-md-6 item text">
