Git clone info added

--- a/atajos.html
+++ b/atajos.html
@@ -40,7 +40,7 @@
                         <div class="text">
                             <h2>Clonar un repositorio</h2>
                             <p>¿Sabías que puedes clonar repositorios desde GitHub.com a tu equipo local? Hacer esto permite facilitar la solución de conflictos de combinación, agregar o quitar archivos y enviar confirmaciones más grandes. Cuando se clona un repositorio, ten presente que se copia el repositorio desde GitHub.com al equipo local. Para hacerlo, ejecuta desde terminal el siguiente comando.<br></p>
-                            <p class="border rounded-0 border-light">git clone https://github.com/<em>USERNAME</em>/<em>REPOSITORY-NAME</em></p>
+                            <p class="border rounded-0 border-light">git clone https://github.com/USERNAME/REPOSIRORY-NAME</p>
                             <h2>Inicializar un proyecto</h2>
                             <p>Para iniciar tu primer proyecto en Git, en la carpeta donde tendrás tu proyecto, ejecuta el siguiente comando.<br></p>
                             <p class="border rounded-0 border-light">git init</p>
